Доделал структуру проекта
