# docs/swagger.json
@@ -25,7 +25,7 @@
             "post": {
                 "description": "метод вызывается автоматически из функции-оболочки (AuthMiddleware) при невалидном Accesstoken",
                 "tags": [
-                    "Authorization"
+                    "RefreshToken"
                 ],
                 "summary": "Обновление токена",
                 "responses": {}
@@ -44,7 +44,7 @@
             "get": {
                 "description": "Требует аутентификации.",
                 "tags": [
-                    "Viewing"
+                    "Posts"
                 ],
                 "summary": "Просмотр постов",
                 "responses": {}
@@ -62,7 +62,7 @@
             "put": {
                 "description": "Требует аутентификации(Роль Автор).",
                 "tags": [
-                    "Edit"
+                    "Posts"
                 ],
                 "summary": "Редактирование поста",
                 "responses": {}
@@ -72,7 +72,7 @@
             "post": {
                 "description": "Требует аутентификации(Роль Автор).",
                 "tags": [
-                    "Images"
+                    "Image"
                 ],
                 "summary": "Добавление картинки к посту",
                 "responses": {}
@@ -82,7 +82,7 @@
             "delete": {
                 "description": "Требует аутентификации(Роль Автор).",
                 "tags": [
-                    "Delete"
+                    "Image"
                 ],
                 "summary": "Удаление картинки из поста",
                 "responses": {}
@@ -92,7 +92,7 @@
             "patch": {
                 "description": "Требует аутентификации(Роль Автор).",
                 "tags": [
-                    "Publish"
+                    "Posts"
                 ],
                 "summary": "Публикация поста",
                 "responses": {}
