# pkg/handler/handler.go
@@ -4,6 +4,7 @@ import (
 	"the-first-website/pkg/service"
 
 	"github.com/gorilla/mux"
+	httpSwagger "github.com/swaggo/http-swagger"
 )
 
 type Handler struct {
@@ -16,26 +17,27 @@ func NewHandler(services *service.Service) *Handler {
 
 func (h *Handler) InitRoutes() *mux.Router {
 	router := mux.NewRouter()
+	router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
 
 	api := router.PathPrefix("/api").Subrouter()
 	auth := api.PathPrefix("/auth").Subrouter()
-	posts := auth.PathPrefix("/posts").Subrouter()
+	posts := api.PathPrefix("/posts").Subrouter()
 
 	auth.HandleFunc("/register", h.Register).Methods("POST")
 	auth.HandleFunc("/login", h.Login).Methods("POST")
 	auth.HandleFunc("/refresh-token", h.RefreshToken).Methods("POST")
 
-	auth.HandleFunc("/posts", h.AuthMiddleware(h.Viewing)).Methods("GET")
-	auth.HandleFunc("/posts", h.AuthMiddleware(h.Posts)).Methods("POST")
+	api.HandleFunc("/posts", h.AuthMiddleware(h.ViewingPosts)).Methods("GET")
+	api.HandleFunc("/posts", h.AuthMiddleware(h.CreatePost)).Methods("POST")
 
 	posts.HandleFunc("/{postId:[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}}/images",
-		h.AuthMiddleware(h.Images)).Methods("POST")
+		h.AuthMiddleware(h.AddImage)).Methods("POST")
 	posts.HandleFunc("/{postId:[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}}",
-		h.AuthMiddleware(h.Edit)).Methods("PUT")
+		h.AuthMiddleware(h.EditPost)).Methods("PUT")
 	posts.HandleFunc("/{postId:[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}}/images/"+
-		"{imageId:[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}}", h.AuthMiddleware(h.Delete)).Methods("DELETE")
+		"{imageId:[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}}", h.AuthMiddleware(h.DeleteImage)).Methods("DELETE")
 	posts.HandleFunc("/{postId:[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}}/status",
-		h.AuthMiddleware(h.Publish)).Methods("PATCH")
+		h.AuthMiddleware(h.PublishPost)).Methods("PATCH")
 
 	return router
 }
